--- a/01_整除.md
+++ b/01_整除.md
@@ -30,9 +30,54 @@
 
 &emsp;&emsp;**证明二**：暂时空缺，日后补全。
 
-&emsp;&emsp;将素数从小到大排列，假设 $p_n$ 表示第 $n$ 个素数， $\pi(x)$ 表示不超过 $x$ 的素数个数。下面的定理仅描述了 $p_n$ 的一个弱上界估计与 $\pi(x)$ 的一个弱下界估计。
+&emsp;&emsp;将全体素数从小到大排列，假设 $p_n$ 表示第 $n$ 个素数， $\pi(x)$ 表示不超过 $x$ 的素数个数。下面的定理描述了 $p_n$ 的一个弱上界估计与 $\pi(x)$ 的一个弱下界估计。
 
-&emsp;&emsp;**定理**：
+&emsp;&emsp;**定理**：将全体素数从小到大排列，则第 $n$ 个素数 $p_n$ 与 $\pi(x)$ 分别有以下结论：
+- $p_n\leqslant 2^{2^{n-1}},n=1,2,...$
+- $\pi(x)>log_2^{log_2^x}$
+
+&emsp;&emsp;**证明**：我们使用归纳法来证明第一个结论。当 $n=1$ 时，命题显然成立。假设对于 $n\leqslant k$ ，命题成立。当 $n=k+1$ 时，由上一个定理的证明过程可知，若 $a=p_1p_2\cdot\cdot\cdot p_k+1$ 是素数，则必然是第 $i(i\geqslant k+1)$ 个素数，则必然有 $p_{k+1}\leqslant a=p_1p_2\cdot\cdot\cdot p_k+1$ ；若 $a$ 是合数，则其最小真因子必然是一个素数，并且不出现在前 $k$ 个素数之中，那么也是第 $i(i\geqslant k+1)$ 个素数，必然也会有 $p_{k+1}\leqslant a=p_1p_2\cdot\cdot\cdot p_k+1$ ，综上，就有下面的式子：
+
+$$\begin{align\*}
+p_{k+1}\leqslant p_1p_2\cdot\cdot\cdot p_k+1=2^{2^0}2^{2^1}\cdot\cdot\cdot2^{2^{k-1}}+1=2^{2^k-1}+1<2\cdot2^{2^k-1}=2^{2^k}
+\end{align\*}$$
+
+&emsp;&emsp;于是第一个结论得证。对于第二个结论，我们用 $2^{2^k}$ 对数轴进行划分，也就是说对于任意的 $x\geqslant2$ ，必会存在唯一的整数 $n$ ，使得 $2^{2^{n-1}}\leqslant x<2^{2^n}$ ，所以不超过 $x$ 的素数的个数一定会大于不超过 $2^{2^{n-1}}$ 的素数的个数，而此时由第一个结论，第 $n$ 个素数是要小于 $2^{2^{n-1}}$ ，所以不超过 $2^{2^{n-1}}$ 的素数至少有 $n$ 个，我们就有了下面的式子：
+
+$$\begin{align\*}
+\pi(x)\geqslant\pi(2^{2^{n-1}})\geqslant n>log_2^{log_2^x}
+\end{align\*}$$
+
+&emsp;&emsp;于是第二个结论得证。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
