--- a/01_整除.md
+++ b/01_整除.md
@@ -42,7 +42,7 @@ $$\begin{align\*}
 p_{k+1}\leqslant p_1p_2\cdot\cdot\cdot p_k+1=2^{2^0}2^{2^1}\cdot\cdot\cdot2^{2^{k-1}}+1=2^{2^k-1}+1<2\cdot2^{2^k-1}=2^{2^k}
 \end{align\*}$$
 
-&emsp;&emsp;于是第一个结论得证。对于第二个结论，我们用 $2^{2^k}$ 对数轴进行划分，也就是说对于任意的 $x\geqslant2$ ，必会存在唯一的整数 $n$ ，使得 $2^{2^{n-1}}\leqslant x<2^{2^n}$ ，所以不超过 $x$ 的素数的个数一定会大于不超过 $2^{2^{n-1}}$ 的素数的个数，而此时由第一个结论，第 $n$ 个素数是要小于 $2^{2^{n-1}}$ ，所以不超过 $2^{2^{n-1}}$ 的素数至少有 $n$ 个，我们就有了下面的式子：
+&emsp;&emsp;于是第一个结论得证。对于第二个结论，我们用 $2^{2^k}$ 对数轴进行划分，也就是说对于任意的 $x\geqslant2$ ，必会存在唯一的整数 $n$ ，使得 $2^{2^{n-1}}\leqslant x<2^{2^n}$ ，所以不超过 $x$ 的素数的个数一定会大于不超过 $2^{2^{n-1}}$ 的素数的个数，而此时由第一个结论，第 $n$ 个素数是要小于 $2^{2^{n-1}}$ 的，所以不超过 $2^{2^{n-1}}$ 的素数至少有 $n$ 个，我们就有了下面的式子：
 
 $$\begin{align\*}
 \pi(x)\geqslant\pi(2^{2^{n-1}})\geqslant n>log_2^{log_2^x}
@@ -50,10 +50,114 @@ $$\begin{align\*}
 
 &emsp;&emsp;于是第二个结论得证。
 
+&emsp;&emsp;下面我们介绍初等数论中一个最基本的结论：**带余除法定理**，它是整除的一般情形，也是**Euclid算法**的基础。
 
+&emsp;&emsp;**带余除法定理**：设 $a,b$ 是两个给定的整数且 $a\neq0$ ，那么一定存在唯一的一对整数 $q$ 与 $r$ ，满足
 
+$$\begin{align\*}
+b=qa+r, 0\leqslant r<|a|
+\end{align\*}$$
 
+&emsp;&emsp;其中， $r$ 被称为 $b$ 被 $a$ 除后的**最小非负余数**，此外 $a|b$ 的充要条件是 $r=0$ 。
 
+&emsp;&emsp;**证明**：**唯一性**：若还有整数 $q'$ 与 $r'$ 满足
+
+$$\begin{align\*}
+b=q'a+r', 0\leqslant r'<|a|
+\end{align\*}$$
+
+&emsp;&emsp;那么就会有 $0\leqslant |r'-r|<|a|$ 并且 $r'-r=(q-q')a$ ，若 $r'-r\neq0$ ，那么必有 $|a|\leqslant |r'-r|$ ，但这显然是矛盾的，所以有 $r'-r=0$ ，从而 $q'-q=0$ ，所以**唯一性**成立。至于**存在性**，当 $a|b$ 时，可取 $q=\frac{b}{a},r=0$ 。当 $a\neq b$ 时，考虑集合
+
+$$\begin{align\*}
+T=\\{b-ka|k=\pm1,\pm2,\pm3,\cdot\cdot\cdot\\}
+\end{align\*}$$
+
+&emsp;&emsp;该集合 $T$ 中必有正整数（比如取 $k=\frac{-2|ab|}{a}$ ），则 $T$ 中必有一个最小正整数，记为
+
+$$\begin{align\*}
+t_0=b-k_0a>0
+\end{align\*}$$
+
+&emsp;&emsp;因为 $a\nmid b$ ，所以 $t_0\neq|a|$ ，若 $t_0>|a|$ ，则 $t_1=t_0-|a|>0$ ，而且 $t_1\in T,t_1<t_0$ ，这与 $t_0$ 的最小性是矛盾的，所以就只有 $t_0<|a|$ ，我们取 $q=k_0,r=t_0$ 就满足要求。至于 $a|b$ 的充要条件是 $r=0$ ，这是显然的，定理得证。
+
+&emsp;&emsp;实际上，我们可以通过带余除法对整数进行分类。设 $a\geqslant2$ 是给定的正整数， $j=0,1,2,...,a-1$ ，对于给定的 $j$ ，被 $a$ 除后余数为 $j$ 的全体整数为
+
+$$\begin{align\*}
+ak+j, k=\pm1,\pm2,\pm3,...,
+\end{align\*}$$
+
+&emsp;&emsp;这样的整数组成的集合记为 $S_{a,j}$ 。集合 $\\{S_{a,j}:0\leqslant j\leqslant a-1\\}$ 满足以下两个性质：
+-  $\\{S_{a,j}:0\leqslant j\leqslant a-1\\}$ 中的任两个 $S_{a,j}$ 两两不相交，即
+
+$$\begin{align\*}
+S_{a,j}\cap S_{a,j'}=\phi,0\leqslant j\neq j'\leqslant a-1
+\end{align\*}$$
+
+-  $\\{S_{a,j}:0\leqslant j\leqslant a-1\\}$ 中所有子集的并等于 $\mathbb{Z}$ ，即
+
+$$\begin{align\*}
+\bigcup_{0\leqslant j\leqslant a-1}S_{a,j}=\mathbb{Z}
+\end{align\*}$$
+
+&emsp;&emsp;这样按被 $a$ 除后所得不同的最小非负余数，将全体整数分成了两两不相交的 $a$ 个类，这比较重要，日后会再被提及。
+
+> 另外，余数并不是只有最小非负余数，还有最小正剩余，最小绝对剩余等等。
+
+&emsp;&emsp;下面我们来看一道比较重要的例题。
+
+&emsp;&emsp;例：设 $a\geqslant2$ 是给定的正整数，那么，任一正整数 $n$ 必可唯一表示为
+
+$$\begin{align\*}
+n=r_ka^k+r_{k-1}a^{k-1}+\cdot\cdot\cdot+r_1a^1+r_0
+\end{align\*}$$
+
+&emsp;&emsp;其中整数 $k\geqslant0$ ， $0\leqslant r_j\leqslant a-1(0\leqslant j\leqslant k),r_k\neq0$ 。这就是正整数 $n$ 的 $a$ 进制表示。
+
+&emsp;&emsp;**证明**：对正整数 $n$ 必有唯一的 $k\geqslant0$ ，使得 $a^k\leqslant n<a^{k+1}$ ，由带余除法，必有唯一的 $q_0,r_0$ 满足
+
+$$\begin{align\*}
+n=q_0a+r_0,0\leqslant r_0\leqslant a-1
+\end{align\*}$$
+
+&emsp;&emsp;我们使用数学归纳法来证明这一结论。若 $k=0$ ，则必有 $q_0=0,1\leqslant r_0<a$ ，结论成立。假设 $k=m$ 时结论成立，此时
+
+$$\begin{align\*}
+a^m\leqslant n\leq a^{m+1}\\
+n=r_ma^m+r_{m-1}a^{m-1}+\cdot\cdot\cdot+r_1a^1+r_0  
+\end{align\*}$$
+
+&emsp;&emsp;那么当 $k=m+1$ 时，上式中的 $q_0$ 必满足
+
+$$\begin{align\*}
+a^m\leqslant q_0\leq a^{m+1}  
+\end{align\*}$$
+
+&emsp;&emsp;根据假设，就有
+
+$$\begin{align\*}
+q_0=s_ma^m+s_{m-1}a^{m-1}+\cdot\cdot\cdot+s_1a^1+s_0  
+\end{align\*}$$
+
+&emsp;&emsp;其中 $0\leqslant s_j\leqslant a-1(0\leqslant j\leqslant m),s_m\neq0$ ，因而有
+
+$$\begin{align\*}
+n=s_ma^{m+1}+s_{m-1}a^{m}+\cdot\cdot\cdot+s_0a+r_0
+\end{align\*}$$
+
+&emsp;&emsp;即结论对 $k=m+1$ 也成立，定理得证。
+
+&emsp;&emsp;虽然进制表示的公式看上去有些复杂，但是实际上的进制转换并没有那么复杂。比如说将十进制整数27182写成十二进制的形式，我们只需要进行下面的算法就可以了。
+
+$$\begin{align\*}
+27182=12\cdot2265+2\\
+2265=12\cdot188+9\\
+188=12\cdot15+8\\
+15=12\cdot1+3\\
+1=12\cdot0+1\\
+得27182_{10}=13892_{12}
+\end{align\*}$$
+
+## 最大公因子与最小公倍数
 
 
 
