--- a/01_整除.md
+++ b/01_整除.md
@@ -5,14 +5,27 @@
 &emsp;&emsp;**定义**：设 $a,b\in\mathbb{Z}$ ，如果存在 $q\in\mathbb{Z}$ ，使得 $b=aq$ ，那么就说 $b$ 可以被 $a$ 整除或者 $a$ 整除 $b$ ，记作 $a|b$ ，称 $b$ 是 $a$ 的倍数， $a$ 是 $b$ 的因子（也叫做约数，除数）。否则就说 $b$ 不能被 $a$ 整除或者 $a$ 不整除 $b$ ，记作 $a\nmid b$ 。
 
 &emsp;&emsp;由整除的定义，我们可以立即得出整除的一些性质（设 $a,b,c\in\mathbb{Z}$）：
+- $a|b\Leftrightarrow -a|b\Leftrightarrow a|-b\Leftrightarrow |a|||b|$
 - $a|b$ 且 $b|c\Rightarrow a|c$
 - $a|b$ 且 $a|c\Leftrightarrow$ 对任意的 $x,y\in\mathbb{Z}$ 有 $a|bx+cy$
 - 若 $m\in\mathbb{Z}$ 且 $m\neq0$ ，则 $a|b\Leftrightarrow ma|mb$
 - $a|b$ 且 $b|a\Rightarrow a=\pm b$
 - 若 $b\neq 0$ ，则 $a|b\Leftarrow |a|\leqslant |b|$  
-只需定义即可证明，此处略过。
+只需定义即可证明，此处略过。但是需要注意的是，尽管这些性质十分简单，但是确实十分重要的，我们下面来举例说明。
 
-&emsp;&emsp;显然地， $\pm1,\pm b$ 是 $b$ 的因子，我们称其为 $b$ 的**显然因子**，其他因子则称为 $b$ 的**非显然因子**，又叫**真因子**。我们由此可得到下面关于**素数**定义。
+&emsp;&emsp;**例**：**证明**：若 $3|n$ 且 $7|n$ ，则 $21|n$ 
+
+&emsp;&emsp;**证**：由 $3|n$ 知 $n=3m$ ，所以 $7|3m$ ，又因为 $7|7m$ 得 $7|(7m-2\cdot3m)$ 也就是 $7|m$ ，所以 $21|n$ 。
+
+&emsp;&emsp;**例**：设 $a,b$ 是两个给定的非零整数，且有整数 $x,y$ ，使得 $ax+by=1$ **证明**：(i)若 $a|n$ 且 $b|n$ ，则 $ab|n$ 。(ii)若 $a|bn$ ，则 $a|n$ 。
+
+&emsp;&emsp;**证**：由 $ax+by=1$ ，可得 $n=axn+byn=(na)x+(nb)y$ ，又因为 $a|n$ 且 $b|n$ ，所以 $ab|nb$ 且 $ab|na$ ，故 $ab|(na)x+(nb)y$ ，也就是 $ab|n$ 。这就证明了(i)，因为 $a|bn$ 并且 $a|an$ ，所以 $ab|(na)x+(nb)y$ ，也就是 $ab|n$ ，这就证明了(ii)。
+
+&emsp;&emsp;显然地， $\pm1,\pm b$ 是 $b$ 的因子，我们称其为 $b$ 的**显然因子**，其他因子则称为 $b$ 的**非显然因子**，又叫**真因子**。
+
+> 对于约数（因子），我们有这样一个比较显然的定理：设整数 $b\neq0$ ， $d_1,d_2,...,d_k$ 是它的全体约数，那么 $b/d_1,b/d_2,...,b/d_k$ 也是它的全体约数，也就是说，当 $d$ 遍历 $b$ 的全体约数时， $b/d$ 也遍历 $b$ 的全体约数。
+
+&emsp;&emsp;我们由此可得到下面关于**素数**定义。
 
 &emsp;&emsp;**定义**：设整数 $p\neq0,\pm1$ 。如果 $p$ 除了显然因子外没有其他的因子，那么就称 $p$ 为**素元**，也叫**素数**，若整数 $a\neq0,\pm1$ 并且 $a$ 除了显然因子之外还有真因子，则称 $a$ 为**合数**。
 
@@ -27,6 +40,8 @@
 &emsp;&emsp;**定理**：素数有无穷多个。
 
 &emsp;&emsp;**证明一**：假设只有有限个素数，设为 $p_1,P_2,\cdot\cdot\cdot,p_k$ ，考虑 $a=p_1p_2\cdot\cdot\cdot p_k+1$ ，由于素数有限个，那么 $a$ 必然是合数，则 $a$ 的最小真因子必然是素数，记为 $p$ ，而且该素数必等于某一个 $p_i$ ，所以说就有 $p|p_1p_2\cdot\cdot\cdot p_k$ ，又因为 $p|a$ ，所以就有 $p|(a-p_1p_2\cdot\cdot\cdot p_k)$ 也就是 $p|1$ ，这与 $p$ 是素数是矛盾的，故假设错误，原定理成立。
+
+> 若令 $Q_k=q_1q_2\cdot\cdot\cdot q_k+1$ ，我们可以直接计算出一些结果： $Q_1$ =3， $Q_2$ =7， $Q_3$ =31， $Q_4$ =211， $Q_5$ =2311， $Q_6$ = $59\times509$ ， $Q_7$ = $19\times97\times277$ ， $Q_8$ = $347\times27953$ ， $Q_9$ = $317\times703763$ ， $Q_{10}$ = $331\times571\times34231$ ，这里前五个是素数，后五个是合数，所以对于任意的 $k$ ，我们不敢贸然判断 $Q_k$ 是质数还是合数，而且，至今我们都不知道是否有无穷多个 $k$ 使得 $Q_k$ 是质数，也不知道是否有无穷多个 $k$ 使得 $Q_k$ 是合数。
 
 &emsp;&emsp;**证明二**：暂时空缺，日后补全。
 
