--- a/01_整除.md
+++ b/01_整除.md
@@ -43,7 +43,7 @@
 
 > 若令 $Q_k=q_1q_2\cdot\cdot\cdot q_k+1$ ，我们可以直接计算出一些结果： $Q_1$ =3， $Q_2$ =7， $Q_3$ =31， $Q_4$ =211， $Q_5$ =2311， $Q_6$ = $59\times509$ ， $Q_7$ = $19\times97\times277$ ， $Q_8$ = $347\times27953$ ， $Q_9$ = $317\times703763$ ， $Q_{10}$ = $331\times571\times34231$ ，这里前五个是素数，后五个是合数，所以对于任意的 $k$ ，我们不敢贸然判断 $Q_k$ 是质数还是合数，而且，至今我们都不知道是否有无穷多个 $k$ 使得 $Q_k$ 是质数，也不知道是否有无穷多个 $k$ 使得 $Q_k$ 是合数。
 
-&emsp;&emsp;**证明二**：暂时空缺，日后补全。
+&emsp;&emsp;**证明二**：我们要证明素数有无穷多个，我们只需要说明对于任意的正整数 $n$ ，皆有素数 $p$ 使得 $p>n$ 。我们考虑 $n!+1$ ，若 $n!+1$ 为素数，则显然该数比 $n$ 大；若 $n!+1$ 为合数，则其必有一素因子 $p$ ，若 $p\leqslant n$ ，那么就会有 $p|n!$ ，那么可得 $p|1$ ，显然是错误的，所以 $p>n$ ，也就是说，对于任意的正整数 $n$ ，不管 $n!+1$ 为素数还是合数，我们都能找到大于 $n$ 的素数，也就证明了素数有无限个。
 
 &emsp;&emsp;将全体素数从小到大排列，假设 $p_n$ 表示第 $n$ 个素数， $\pi(x)$ 表示不超过 $x$ 的素数个数。下面的定理描述了 $p_n$ 的一个弱上界估计与 $\pi(x)$ 的一个弱下界估计。
 
