--- a/01_整除.md
+++ b/01_整除.md
@@ -174,8 +174,11 @@ $$\begin{align\*}
 
 ## 最大公因子与最小公倍数
 
+&emsp;&emsp;**最大公因子**与**最小公倍数**是整除理论中两个最基本的概念。
 
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个整数，如果 $d|a_1$ 且 $d|a_2$ ，那么就称 $d$ 是 $a_1$ 和 $a_2$ 的**公因子**。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个整数，如果 $d|a_1,d|a_2,...,d|a_k$ ，那么就称 $d$ 是 $a_1,a_2,...,a_k$ 的**公因子**。
 
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个不全为零的整数， $d$ 是 $a_1$ 和 $a_2$ 的一个正公因子，若对任意的 $d'|a_1,d'|a_2$ 
 
 
 
