--- a/01_整除.md
+++ b/01_整除.md
@@ -45,6 +45,8 @@
 
 &emsp;&emsp;**证明二**：我们要证明素数有无穷多个，我们只需要说明对于任意的正整数 $n$ ，皆有素数 $p$ 使得 $p>n$ 。我们考虑 $n!+1$ ，若 $n!+1$ 为素数，则显然该数比 $n$ 大；若 $n!+1$ 为合数，则其必有一素因子 $p$ ，若 $p\leqslant n$ ，那么就会有 $p|n!$ ，那么可得 $p|1$ ，显然是错误的，所以 $p>n$ ，也就是说，对于任意的正整数 $n$ ，不管 $n!+1$ 为素数还是合数，我们都能找到大于 $n$ 的素数，也就证明了素数有无限个。
 
+&emsp;&emsp;**证明三**（此证明涉及后文知识点）：由于费马数无穷多且两两互素，若素数有限，那必然存在一个素数同时是两个费马数的真因子，那么这两个费马数就不会互素，矛盾。
+
 &emsp;&emsp;将全体素数从小到大排列，假设 $p_n$ 表示第 $n$ 个素数， $\pi(x)$ 表示不超过 $x$ 的素数个数。下面的定理描述了 $p_n$ 的一个弱上界估计与 $\pi(x)$ 的一个弱下界估计。
 
 &emsp;&emsp;**定理**：将全体素数从小到大排列，则第 $n$ 个素数 $p_n$ 与 $\pi(x)$ 分别有以下结论：
@@ -178,7 +180,109 @@ $$\begin{align\*}
 
 &emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个整数，如果 $d|a_1$ 且 $d|a_2$ ，那么就称 $d$ 是 $a_1$ 和 $a_2$ 的**公因子**。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个整数，如果 $d|a_1,d|a_2,...,d|a_k$ ，那么就称 $d$ 是 $a_1,a_2,...,a_k$ 的**公因子**。
 
-&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个不全为零的整数， $d$ 是 $a_1$ 和 $a_2$ 的一个正公因子，若对任意的 $d'|a_1,d'|a_2$ 
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个不全为零的整数， $d$ 是 $a_1$ 和 $a_2$ 的一个正公因子，若对任意的 $d'|a_1,d'|a_2$ ，都有 $d'|d$ 成立，则称 $d$ 为 $a_1$ 和 $a_2$ 的**最大公因子**，记作 $d=(a_1,a_2)$ 或者 $d=gcd(a_1,a_2)$ 。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个不全为零的整数， $d$ 是 $a_1,a_2,...,a_k$ 的公因子，若对任意的 $a_1,a_2,...,a_k$ 的公因子 $d'$ ，皆有 $d'|d$ ，则称 $d$ 为 $a_1,a_2,...,a_k$ 的最大公因子，记作 $(a_1,a_2,...,a_k)$ 或者 $gcd(a_1,a_2,...,a_k)$ 。
+
+最大公因子有下面的性质：
+- 对任意整数 $x$ , $(a_1,a_2)=(a_1,a_2+a_1x)$  
+  证明也很容易，令 $d=(a_1,a_2),d'=(a_1,a_2+a_1x)$ ，那么就会有 $d'|a_1,d'|a_2+a_1x$ ，所以就会有 $d'|a_2$ ，那么 $d'$ 作为 $a_1$ 和 $a_2$ 的公因子，一定就有 $d'|d$ ； $d|a_1$ 且 $d|a_2$ ，就会有 $d|a_2+a_1x$ ，那么 $d$ 作为 $a_1$ 和 $a_2+a_1x$ 的公因子，就会有 $d|d'$ ，
+所以 $d'=d$ ，性质得证。
+- 设 $m>0$ ，则 $m(b_1,b_2,...,b_k)=(mb_1,mb_2,mb_3,...,mb_k)$  
+  令 $d=(b_1,b_2,...,b_k),d'=(mb_1,mb_2,mb_3,...,mb_k)$ ，也就是有 $d|b_i(1\leqslant i\leqslant k)$ ，那么一定会有 $md|mb_i(1\leqslant i\leqslant k)$ ，所以就有 $md|d'$ ，反之，由于 $m|mb_i$ ，那必然会有 $m|d'$ ，也就是 $d'=qm,qm|mb_i$ ，所以 $q|b_i$ ，就有 $q|d$ ，也就是 $mq|md$ ，即 $d'|md$ ，所以 $d'=md$ ，命题得证。
+- 设 $a_1,a_2$ 是两个不全为零的整数，则 $(\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)})=1$ 。更一般地，有
+
+$$\begin{align\*}
+(\frac{a_1}{(a_1,a_2,...,a_k)},...,\frac{a_k}{(a_1,a_2,...,a_k)})=1
+\end{align\*}$$
+
+&emsp;&emsp;用反证法即可证明，这里不再赘述。
+- $(a_1,a_2)=(a_1,a_2,xa_1)=(a_1,a_2,xa_2)$  
+  令 $d=(a_1,a_2),d'=(a_1,a_2,xa_1)$ ，显然有 $d'|a_1,d'|a_2$ ，也就是 $d'|d$ ，同理有 $d|d'$ ，所以 $d'=d$ ，性质得证。
+- $(a_1,a_2,a_3)=((a_1,a_2),a_3)$   
+  令 $d=(a_1,a_2,a_3),d'=((a_1,a_2),a_3)$ ，所以 $d|a_1$ 且 $d|a_2$ ，那么 $d|(a_1,a_2)$ ， 又因为 $d|a_3$ ，所以 $d|d'$ ，反之同理有 $d'|d$ ，所以 $d'=d$ ，性质得证。 
+- $(a_1,··· ,a_{k+r})=((a_1,...,a_k),(a_{k+1},...,a_{k+r}))$ （上一条性质的广义版本）  
+
+&emsp;&emsp;实际上，第一条性质为我们提供了一种求解最大公因子的简单方法，就是两数不断相减：
+
+$$\begin{align\*}
+(442,87)=(442-87\times5,87)=(7,87)=(7,87-7\times12)=(7,3)=1
+\end{align\*}$$
+
+&emsp;&emsp;下面我们来看一道经典例题：
+
+&emsp;&emsp;设 $a>2$ 是奇数，证明：  
+&emsp;&emsp;(1)一定存在正整数 $d\leqslant a-1$ ，使得 $a|2^d-1$ 。  
+&emsp;&emsp;(2)设 $d_0$ 是满足 $a|2^d-1$ 的最小正整数，那么 $a|2^h-1$ 的充要条件是 $d_0|h$ 。  
+&emsp;&emsp;(3)必有正整数 $d$ 使得 $(2^d-3,a)=1$ 。  
+
+&emsp;&emsp;**证明**：**(1)** 考虑以下 $a$ 个数
+
+$$\begin{align\*}
+2^0,2^1,2^2,2^3,...,2^{a-1}
+\end{align\*}$$
+
+&emsp;&emsp;由 $a\nmid 2^j(0\leqslant j<a)$ 以及带余除法知，对于每个 $j$ ，都有 $2^j=q_ja+r_j,0<r_j<a$ ，这 $a$ 个余数 $r_0,r_1,r_2,...,r_{a-1}$ 仅可能取 $a-1$ 个值，那么必然有两个余数是相等的，不妨设 $0\leqslant i<k<a$ 且 $r_i=r_k$ ，因而有
+
+$$\begin{align\*}
+a(q_k-q_i)=2^k-2^i=2^i(2^{k-i}-1)
+\end{align\*}$$
+
+&emsp;&emsp;由 $(a,2)=1$ ，推出 $a|2^{k-i}-1$ 。取 $d=k-i\leqslant a-1$ 就满足要求。
+
+&emsp;&emsp; **(2)** 充分性：若 $d_0|h$ ，也就是 $h=qd_0$ ，所以 $2^h-1=(2^{d_0})^q-1=(2^{d_0}-1)(\cdot\cdot\cdot)$ ，所以有 $a|2^h-1$ 。  
+&emsp;&emsp;   必要性：由带余除法定理可得 $h=qd_0+r,0\leqslant r<d_0$ ，所以有：
+
+
+$$\begin{align\*}
+2^h-1=2^{qd_0+r}-2^r+2^r-1=2^r(2^{qd_0}-1)+(2^r-1)
+\end{align\*}$$
+
+&emsp;&emsp;由于 $a|2^h-1$ 并且 $a|2^{qd_0}-1$ ，所以 $a|2^r-1$ ，注意到 $r$ 作为余数应小于 $d_0$ ，但 $d_0$ 又是满足 $a|2^d-1$ 的最小正整数，所以 $r=0$ ，所以就有 $d_0|h$ 。 
+
+&emsp;&emsp; **(3)** 由(1)知，存在 $d$ 使得 $a|2^d-1$ ，那么 $(2^d-3,a)=(2^d-1-2,a)=(-2,a)=1$ ，得证。
+
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个整数，若 $(a_1,a_2)=1$ ，则称 $a_1$ 和 $a_2$ 是既约的（或者说是互素的），若 $(a_1,a_2,...,a_k)=1$ ，那么就称 $a_1,a_2,...,a_k$ 是互素的。
+
+&emsp;&emsp;下面我们来看一道经典例题，费马数。
+
+&emsp;&emsp;例：费马数 $F_n$ 定义： $F_n=(2)^{2^n}-1$ ，其中 $n$ 为非负整数，证明：任意两个不同的Fermat数互素。
+
+&emsp;&emsp;**证明**：对任意两个不同的费马数 $F_n,F_m$ ，不妨设 $n=m+k,k>0$ ，我们有：
+
+$$\begin{align\*}
+\frac{F_n-2}{F_m}=\frac{F_{m+k}-2}{F_m}=\frac{2^{2^{m+k}}-1}{2^{2^m}+1}=\frac{(2^{2^m})^{2^k}-1}{2^{2^m}+1}
+\end{align\*}$$
+
+&emsp;&emsp;所以有 $F_m|F_n-2$ ，由 
+
+$$\begin{align\*}
+(F_m,F_n)|F_n,(F_m,F_n)|F_n-2
+\end{align\*}$$
+
+&emsp;&emsp;所以有 $(F_m,F_n)|2$ ，又因为费马数都是奇数，公因子不可能是2，所以 $(F_m,F_n)=1$ ，得证。
+
+&emsp;&emsp;其实根据上述过程我们能够得到：
+
+$$\begin{align\*}
+F_n=\prod_{i=0}^{n-1}F_i+2
+\end{align\*}$$
+
+&emsp;&emsp;为什么会这样呢？其实是因为前面证明出的结论： $F_m|F_n-2$ ，如果 $m$ 从0取到 $n-1$ ，那么就有 $F_0|F_n-2,F_1|F_n-2,...,F_{n-1}|F_n-2$ ，但是又因为前 $n$ 个费马数两两互素，所以前 $n$ 个费马数皆是 $F_n$ 的因子，也就是有：
+
+$$\begin{align\*}
+F_n-2=q_nF_0F_1F_2...F_{n-1}(q_n依然是未知的)
+\end{align\*}$$
+
+&emsp;&emsp;接下来只需使用数学归纳法证明对于任意的费马数 $F_n$ 皆有 $q_n=1$ 即可。（实际上，写到这里的时候我突然反应过来，其实可以一开始就直接使用数学归纳法来证明这个结论，可以省去前面一段分析。）
+
+> 费马数这一两两互素的性质也可以用于证明素数有无穷多个，对应证明于前文提到过。另外，费马（1601-1665）曾猜测费马数都是素数，但是被欧拉心算验证 $F_5=4294967297$ 不是素数（是的，晚年欧拉失明，只能心算结果），至今我们也没发现过新的费马素数。
+
+
+
+
+
+
+
+
 
 
 
