--- a/01_整除.md
+++ b/01_整除.md
@@ -276,9 +276,23 @@ F_n-2=q_nF_0F_1F_2...F_{n-1}(q_n依然是未知的)
 
 > 费马数这一两两互素的性质也可以用于证明素数有无穷多个，对应证明于前文提到过。另外，费马（1601-1665）曾猜测费马数都是素数，但是被欧拉心算验证 $F_5=4294967297$ 不是素数（是的，晚年欧拉失明，只能心算结果），至今我们也没发现过新的费马素数。
 
+&emsp;&emsp;下面我们来补充一些关于公因数的重要性质。
 
+&emsp;&emsp;**定理**：设 $(m,a)=1$ ，则有 $(m,ab)=(m,b)$    
+- 证明：若 $m=0$ ，则 $a=\pm1$ ，结果显然成立；当 $m\neq0$ ，则有：
 
+$$\begin{align\*}
+(m,b)=(m,b(m,a))=(m,(mb,ab))=(m,mb,ab)=(m,ab)
+\end{align\*}$$
 
+- **推论**：设 $(m,a)=1$ ， $n$ 是正整数，则有 $(m,a^n)=1$ (取 $b=a$ 反复使用定理即可)   
+- **推论**：设 $(a,b)=1$ ， $k,t$ 是正整数，则有 $(a^k,b^t)=1$ (反复使用定理即可)  
+
+&emsp;&emsp;**定理**：设 $(m,a)=1$ ，若 $m|ab$ ，则 $m|b$
+- 证明：由于 $m|ab$ ，那么 $|m|=(m,ab)$ ，又因为 $(m,a)=1$ ，所以 $(m,ab)=(m,b)$ ，即 $|m|=(m,b)$ ，所以有 $m|b$ 。
+- **推论**：设 $p$ 是一个素数且 $p|ab$ ，那么 $p|a$ 或者 $p|b$ 。
+  
+&emsp;&emsp;看完了最小公因子，下面我们来看一下最大公倍数。
 
 
 
