--- a/01_整除.md
+++ b/01_整除.md
@@ -292,19 +292,35 @@ $$\begin{align\*}
 - 证明：由于 $m|ab$ ，那么 $|m|=(m,ab)$ ，又因为 $(m,a)=1$ ，所以 $(m,ab)=(m,b)$ ，即 $|m|=(m,b)$ ，所以有 $m|b$ 。
 - **推论**：设 $p$ 是一个素数且 $p|ab$ ，那么 $p|a$ 或者 $p|b$ 。
   
-&emsp;&emsp;看完了最小公因子，下面我们来看一下最大公倍数。
+&emsp;&emsp;看完了最大公因子，下面我们来看一下最小公倍数。
 
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个均不等于0的整数，如果 $a_1|l,a_2|l$ ，则称 $l$ 是 $a_1$ 和 $a_2$ 的**公倍数**。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个均不等于0的整数，如果 $a_1|l,...,a_k|l$ ，则称 $l$ 是 $a_1,a_2,...,a_k$ 的公倍数。
 
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个均不等于0的整数， $l$ 是 $a_1$ 和 $a_2$ 的一个正公倍数，若对 $a_1,a_2$ 的任意公倍数 $l'$ ，有 $l|l'$ ，称 $l$ 是 $a_1$ 和 $a_2$ 的**最小公倍数**，记作 $[a_1,a_2]$ 。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个均不等于0的整数， $l$ 是 $a_1,a_2,...,a_k$ 的一个正公倍数，如果对于 $a_1,a_2,...,a_k$ 的任意公倍数 $l'$ ，皆有 $l|l'$ ，称 $l$ 是 $a_1,a_2,...,a_k$ 的最小公倍数，记作 $[a_1,a_2,...,a_k]$ 。
 
+&emsp;&emsp;最小公倍数的性质：
+- 若 $a_2|a_1$ ，则 $[a_1,a_2]=|a_1|$  
+  若 $a_j|a_1,2\leqslant j\leqslant k$ ，则 $[a_1,a_2,...,a_k]=|a_1|$
+- 对于任意的 $d|a_1$ ， $[a_1,a_2]=[a_1,a_2,d]$
+- 设 $m>0$ ，我们有 $[ma_1,ma_2,...,ma_k]=m[a_1,a_2,...,a_k]$   
 
+&emsp;&emsp;**定理**：$[a_1,a_2](a_1,a_2)=|a_1a_2|$ 
 
+&emsp;&emsp;**证明**：当 $(a_1,a_2)=1$ 时，由于 $|a_1a_2|$ 是 $a_1$ 和 $a_2$ 的一个公倍数，所以 $[a_1,a_2]||a_1a_2|$ ，另外，由于 $a_1|[a_1,a_2]=a_1m$ ，所以 $a_2|[a_1,a_2]=a_1m$ ，但又因为 $a_1$ 和 $a_2$ 互质，所以 $a_2|m$ ，所以 $|a_1a_2||[a_1,a_2]$ ，也就有 $|a_1a_2|=[a_1,a_2]$ 。若 $(a_1,a_2)\neq1$ ，由最大公因子性质得：
 
+$$\begin{align\*}
+(\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)})=1
+\end{align\*}$$
 
+&emsp;&emsp;此时就有 $\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)}$ 互质，由前面的结论，就有：
 
+$$\begin{align\*}
+\[\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)}\]=\frac{|a_1a_2|}{(a_1,a_2)^2}
+\end{align\*}$$
 
+&emsp;&emsp;两边同乘 $(a_1,a_2)^2$ 即得结论。
 
-
-
+> 其实该定理也给出了一种最小公倍数的求解办法。
 
 
 
