--- a/01_整除.md
+++ b/01_整除.md
@@ -296,17 +296,17 @@ $$\begin{align\*}
 
 &emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个均不等于0的整数，如果 $a_1|l,a_2|l$ ，则称 $l$ 是 $a_1$ 和 $a_2$ 的**公倍数**。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个均不等于0的整数，如果 $a_1|l,...,a_k|l$ ，则称 $l$ 是 $a_1,a_2,...,a_k$ 的公倍数。
 
-&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个均不等于0的整数， $l$ 是 $a_1$ 和 $a_2$ 的一个正公倍数，若对 $a_1,a_2$ 的任意公倍数 $l'$ ，有 $l|l'$ ，称 $l$ 是 $a_1$ 和 $a_2$ 的**最小公倍数**，记作 $[a_1,a_2]$ 。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个均不等于0的整数， $l$ 是 $a_1,a_2,...,a_k$ 的一个正公倍数，如果对于 $a_1,a_2,...,a_k$ 的任意公倍数 $l'$ ，皆有 $l|l'$ ，称 $l$ 是 $a_1,a_2,...,a_k$ 的最小公倍数，记作 $[a_1,a_2,...,a_k]$ 。
+&emsp;&emsp;**定义**：设 $a_1,a_2$ 是两个均不等于0的整数， $l$ 是 $a_1$ 和 $a_2$ 的一个正公倍数，若对 $a_1,a_2$ 的任意公倍数 $l'$ ，有 $l|l'$ ，称 $l$ 是 $a_1$ 和 $a_2$ 的**最小公倍数**，记作 $\[a_1,a_2\]$ 。一般地，设 $a_1,a_2,...,a_k$ 是 $k$ 个均不等于0的整数， $l$ 是 $a_1,a_2,...,a_k$ 的一个正公倍数，如果对于 $a_1,a_2,...,a_k$ 的任意公倍数 $l'$ ，皆有 $l|l'$ ，称 $l$ 是 $a_1,a_2,...,a_k$ 的最小公倍数，记作 $\[a_1,a_2,...,a_k\]$ 。
 
 &emsp;&emsp;最小公倍数的性质：
-- 若 $a_2|a_1$ ，则 $[a_1,a_2]=|a_1|$  
-  若 $a_j|a_1,2\leqslant j\leqslant k$ ，则 $[a_1,a_2,...,a_k]=|a_1|$
-- 对于任意的 $d|a_1$ ， $[a_1,a_2]=[a_1,a_2,d]$
-- 设 $m>0$ ，我们有 $[ma_1,ma_2,...,ma_k]=m[a_1,a_2,...,a_k]$   
+- 若 $a_2|a_1$ ，则 $\[a_1,a_2\]=|a_1|$  
+  若 $a_j|a_1,2\leqslant j\leqslant k$ ，则 $\[a_1,a_2,...,a_k\]=|a_1|$
+- 对于任意的 $d|a_1$ ， $\[a_1,a_2\]=\[a_1,a_2,d\]$
+- 设 $m>0$ ，我们有 $\[ma_1,ma_2,...,ma_k\]=m\[a_1,a_2,...,a_k\]$   
 
-&emsp;&emsp;**定理**：$[a_1,a_2](a_1,a_2)=|a_1a_2|$ 
+&emsp;&emsp;**定理**：$\[a_1,a_2\](a_1,a_2)=|a_1a_2|$ 
 
-&emsp;&emsp;**证明**：当 $(a_1,a_2)=1$ 时，由于 $|a_1a_2|$ 是 $a_1$ 和 $a_2$ 的一个公倍数，所以 $[a_1,a_2]||a_1a_2|$ ，另外，由于 $a_1|[a_1,a_2]=a_1m$ ，所以 $a_2|[a_1,a_2]=a_1m$ ，但又因为 $a_1$ 和 $a_2$ 互质，所以 $a_2|m$ ，所以 $|a_1a_2||[a_1,a_2]$ ，也就有 $|a_1a_2|=[a_1,a_2]$ 。若 $(a_1,a_2)\neq1$ ，由最大公因子性质得：
+&emsp;&emsp;**证明**：当 $(a_1,a_2)=1$ 时，由于 $|a_1a_2|$ 是 $a_1$ 和 $a_2$ 的一个公倍数，所以 $\[a_1,a_2\]||a_1a_2|$ ，另外，由于 $a_1|\[a_1,a_2\]=a_1m$ ，所以 $a_2|\[a_1,a_2\]=a_1m$ ，但又因为 $a_1$ 和 $a_2$ 互质，所以 $a_2|m$ ，所以 $|a_1a_2||\[a_1,a_2\]$ ，也就有 $|a_1a_2|=\[a_1,a_2\]$ 。若 $(a_1,a_2)\neq1$ ，由最大公因子性质得：
 
 $$\begin{align\*}
 (\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)})=1
@@ -322,14 +322,40 @@ $$\begin{align\*}
 
 > 其实该定理也给出了一种最小公倍数的求解办法。
 
+&emsp;&emsp;设 $k$ 是正整数，证明：  
+&emsp;&emsp;(1) $(a^k,b^k)=(a,b)^k$   
+&emsp;&emsp;(2)设 $a,b$ 是整数，若 $(a,b)=1,ab=c^k$ ，则 $a=(a,c)^k,b=(b,c)^k$ 。
 
+&emsp;&emsp;**证明**：**(1)**
 
+$$\begin{align\*}
+(a^k,b^k)=(a,b)^k(\frac{a^k}{(a,b)^k},\frac{b^k}{(a,b)^k})=(a,b)^k((\frac{a}{(a,b)})^k,(\frac{b}{(a,b)})^k)
+\end{align\*}$$
 
+&emsp;&emsp;而
 
+$$\begin{align\*}
+((\frac{a}{(a,b)}),(\frac{b}{(a,b)}))=1
+\end{align\*}$$
 
+&emsp;&emsp;所以有
 
+$$\begin{align\*}
+((\frac{a}{(a,b)})^k,(\frac{b}{(a,b)})^k)=1
+\end{align\*}$$
 
+&emsp;&emsp;得证。  
+&emsp;&emsp;**(2)**：由 $(a,b)=1$ 可得 $(a^{k-1},b)=1$ ，从而
 
+$$\begin{align\*}
+a=a(a^{k-1},b)=(a^k,ab)=(a^k,c^k)=(a,c)^k (这里是第一问的结论）
+\end{align\*}$$
+
+&emsp;&emsp;同理可得 $b=(b,c)^k$ 。
+
+&emsp;&emsp;**例**：设 $p$ 是素数，证明： $\sqrt{p}$ 不是有理数。
+
+&emsp;&emsp;**证明**：设 $\frac{a}{b}=\sqrt{p}$ ， $(a,b)=1$ ，则 $\frac{a^2}{b^2}=p$ ，也就是 $pb^2=a^2$ ，所以 $p|a^2$ ，所以 $p|a$ ，不妨记 $a=xp$ ，则 $pb^2=p^2x^2$ ，则 $px^2=b^2$ ，那么 $p|b^2$ ，所以 $p|b$ ，这与 $(a,b)=1$ 矛盾，得证。
 
 
 
