--- a/01_整除.md
+++ b/01_整除.md
@@ -357,6 +357,112 @@ a=a(a^{k-1},b)=(a^k,ab)=(a^k,c^k)=(a,c)^k (这里是第一问的结论）
 
 &emsp;&emsp;**证明**：设 $\frac{a}{b}=\sqrt{p}$ ， $(a,b)=1$ ，则 $\frac{a^2}{b^2}=p$ ，也就是 $pb^2=a^2$ ，所以 $p|a^2$ ，所以 $p|a$ ，不妨记 $a=xp$ ，则 $pb^2=p^2x^2$ ，则 $px^2=b^2$ ，那么 $p|b^2$ ，所以 $p|b$ ，这与 $(a,b)=1$ 矛盾，得证。
 
+## Euclid算法
+
+&emsp;&emsp;**Euclid算法**（又叫辗转相除法），是数学领域最基本的算法之一，该算法基于下面这个基本定理（其实在前面我们已经提到过）：
+
+&emsp;&emsp;设 $a,b\in Z,b\neq0$ ，作带余除法有 $a=qb+r$ ，则 $(a,b)=(b,r)$ 。
+
+&emsp;&emsp;下面我们来一步一步拆解算法流程，欲求 $d=(a,b)$ ：  
+&emsp;&emsp;**第1步**：使用带余除法
+
+$$\begin{align\*}
+a=q_0b+r_0,0\leqslant r_0\leqslant b-1
+\end{align\*}$$
+
+&emsp;&emsp;根据最大公因子的性质就有：
+
+$$\begin{align\*}
+(a,b)=(a-q_0b,b)=(b,r_0)
+\end{align\*}$$
+
+&emsp;&emsp;如果 $r_0=0$ ，那么 $d=(b,r_0)=b$ ，该算法结束。但如果 $r_0\neq0$ ，那么进行第二步：  
+&emsp;&emsp;**第2步**：继续使用带余除法
+
+$$\begin{align\*}
+b=q_1r_0+r_1,0\leqslant r_1\leqslant r_0
+\end{align\*}$$
+
+&emsp;&emsp;那么就有 $d=(b,r_0)=(r_0,r_1)$ ，若 $r_1\neq0$ 就继续进行下去。
+
+&emsp;&emsp;**第i步**：继续使用带余除法
+
+$$\begin{align\*}
+r_{i-3}=q_{i-1}r_{i-2}+r_{i-1},0\leqslant r_{i-1}\leqslant r_{i-2}-1
+\end{align\*}$$
+
+&emsp;&emsp;那么就有 $d=(r_{i-3},r_{i-2})=(r_{i-2},r_{i-1})$ ，若 $r_{i-1}\neq0$ 就继续进行下去。
+
+&emsp;&emsp;但是这个算法必然会有终止的时候，这主要是因为我们后续作带余除法的余数会越来越小，而我们所得到的第一个余数是小于 $b$ 的，那么后续的余数会单调递减的出现，而 $b$ 前面只有有限个非负整数，所以这个算法一定会终止。
+
+&emsp;&emsp;**最后两步**：算法的最后就会像下面这样：
+
+$$\begin{align\*}
+r_{k-2}=q_kr_{k-1}+r_k ,0\leqslant r_k\leqslant r_{k-1}-1 \\
+r_{k-1}=q_{k+1}r_k+0
+\end{align\*}$$
+
+&emsp;&emsp;最后 $d=(r_{k-2},r_{k-1})=(r_{k-1},r_k)=r_k$ ，算法结束。
+
+&emsp;&emsp;下面我们用一个表格来说明这个算法的过程：
+
+| 第 $i$ 步 | 带余除法表达式 | 余数范围 | 原求解 | 现求解 |
+| ------- | -------------- | -------- | ------ | ------ |
+|   1     |$a=q_0b+r_0$    |$0\leqslant r_0\leqslant b-1$|$(a,b)$  |$(b,r_0)$|
+|   2     |$b=q_1r_0+r_1$  |$0\leqslant r_1\leqslant r_0$|$(b,r_0)$|$(r_0,r_1)$|
+|   3     |$r_0=q_2r_1+r_2$|$0\leqslant r_2\leqslant r_1$|$(r_0,r_1)$|$(r_1,r_2)$|
+|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|
+|  $i$    |$r_{i-3}=q_{i-1}r_{i-2}+r_{i-1}$|$0\leqslant r_{i-1}\leqslant r_{i-2}-1$|$(r_{i-3},r_{i-2})$|$(r_{i-2},r_{i-1})$|
+|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|$\cdot\cdot\cdot$|
+|   $k$   |$r_{k-3}=q_kr_{k-2}+r_{k-1}$|$0\leqslant r_{k-1}\leqslant r_{k-2}-1$|$(r_{k-3},r_{k-2})$|$(r_{k-2},r_{k-1})$|
+|$k+1$    |$r_{k-2}=q_kr_{k-1}+r_k$|$0\leqslant r_k\leqslant r_{k-1}-1$|$(r_{k-2},r_{k-1})$|$(r_{k-1},r_{k})$|
+|$k+2$    |$r_{k-1}=q_{k+1}r_k+0$| |$(r_{k-1},r_{k})$|$r_k$|
+
+&emsp;&emsp;根据上面的过程，我们不仅能得到 $r_k=(a,b)$ ，还能得到意外的收获：由第 $k+1$ 个式子，我们能得到 $r_k$ 也就是 $(a,b)$ 表示成 $r_{k-1}$ 和 $r_{k-2}$ 的整系数多项式，再由第 $k$ 个式子得到 $r_{k-1}=r_{k-3}-q_{k-1}r_{k-2}$ ，将其代入第 $k+1$ 个式子，就可得到 $(a,b)$ 表示成 $r_{k-2}$ 和 $r_{k-3}$ 的整系数多项式，这样继续从前面往回代入，最后就能得到 $(a,b)$ 表示成 $a$ 和 $b$ 的整系数多项式，也就是我们下面的定理：
+
+&emsp;&emsp;**裴蜀定理**：存在整数 $x_0,x_1$ ，使得 $(a,b)=ax_0+bx_1$ 。  
+&emsp;&emsp;**定理推论**：设 $a_1,a_2,...,a_k$ 是不全为零的整数，那么一定存在一组整数 $x_1,...,x_k$ ，使得：
+
+$$\begin{align\*}
+(a_1,a_2,...,a_k)=a_1x_1+a_2x_2+...+a_kx_k
+\end{align\*}$$
+
+&emsp;&emsp;下面我们来看一道例题，具体了解一下上述过程。  
+&emsp;&emsp;求42823及6409的最大公因子，并将它表示成42823和6409的整系数线性组合形式。
+
+&emsp;&emsp;由Euclid算法可得：
+
+$$\begin{align\*}
+42823=6\times6409+4369\\
+6409=1\times4369+2040\\
+4369=2\times2040+289\\
+2040=7\times289+17\\
+289=17\times17\\
+\end{align\*}$$
+
+&emsp;&emsp;即(42823,6049)=17，求解整系数线性组合只需将上述过程倒过来即可：
+
+$$\begin{align\*}
+17=2040-7\times289\\
+17=2040-7\times(4369-2\times2040)=-7\times4369+15\times2040\\
+17=-7\times4369+15\times(6409-1\times4369)=-22\times4369+15\times6409\\
+17=-22\times(42823-6\times6409)+15\times6409=-22\times42823+147\times6409\\
+\end{align\*}$$
+
+&emsp;&emsp;这就求出了线性组合的形式： $(42823,6049)=-22\times42823+147\times6409$ 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
