--- a/01_整除.md
+++ b/01_整除.md
@@ -451,18 +451,42 @@ $$\begin{align\*}
 
 &emsp;&emsp;这就求出了线性组合的形式： $(42823,6049)=-22\times42823+147\times6409$ 
 
+&emsp;&emsp;**定理**： $(a,b)=1$ 当且仅当存在整数 $m,n$ 使得 $am+bn=1$ 。
+- 证明：若 $(a,b)=1$ ，由裴蜀定理即可；若 $am+bn=1$ ，由于 $(a,b)|a$ ， $(a,b)|b$ ，所以 $(a,b)|am+bn=1$ ，故 $(a,b)=1$ 。
+- **推论**：若 $(a,b)=1$ ，则任一整数 $n$ 必可表示为 $a,b$ 的整系数线性组合的形式。
+- 推论证明：由 $(a,b)=1$ ，故存在整数 $x_0,y_0$ 使得 $ax_0+by_0=1$ ，取 $x=nx_0,y=ny_0$ 。
 
+&emsp;&emsp;**例**：设 $a,m,n$ 是正整数并且 $a\geqslant 2$ ，证明：$(a^m-1,a^n-1)=a^{(m,n)}-1$ 。
 
+&emsp;&emsp;**证明**：不妨设 $m\geqslant n$ 。由带余除法得 $m=q_1n+r,0\leqslant r<n$ ，于是就有：
 
+$$\begin{align\*}
+a^m-1=a^{q_1n+r}-a^r+a^r-1=a^r(a^{q_1n}-1)+a^r-1
+\end{align\*}$$
 
+&emsp;&emsp;由于 $a^n-1|a^{q_1n}-1$ ，所以：
 
+$$\begin{align\*}
+(a^m-1,a^n-1)=(a^n-1,a^r-1)
+\end{align\*}$$
 
+&emsp;&emsp;注意到 $(m,n)=(n,r)$ ，若 $r=0$ ，则 $(m,n)=n$ ，结论成立，若 $r>0$ ，则继续作同样讨论，由辗转相除法可知结论成立。
 
+&emsp;&emsp;试证任意两个相邻的斐波那契数互素。
 
+&emsp;&emsp;证明：如果我们视如下的过程为欧几里得算法：
 
+$$\begin{align\*}
+f_{k+1}=1\times f_k+f_{k-1}\\
+f_{k}=1\times f_{k-1}+f_{k-2}\\
+f_{k-1}=1\times f_{k-2}+f_{k-3}\\
+\cdot\cdot\cdot\\
+f_{5}=1\times f_{4}+f_{3}\\
+f_{4}=1\times f_{3}+f_{2}\\
+f_{3}=1\times f_{2}+f_{1}=2f_{2}\\
+\end{align\*}$$
 
-
-
+所以 $(f_{k+1},f_k)=(f_3,f_2)=(2,1)=1$，例题得证。
 
 
 
