--- a/01_整除.md
+++ b/01_整除.md
@@ -486,7 +486,181 @@ f_{4}=1\times f_{3}+f_{2}\\
 f_{3}=1\times f_{2}+f_{1}=2f_{2}\\
 \end{align\*}$$
 
-所以 $(f_{k+1},f_k)=(f_3,f_2)=(2,1)=1$，例题得证。
+&emsp;&emsp;所以 $(f_{k+1},f_k)=(f_3,f_2)=(2,1)=1$，例题得证。
+
+## 求解一次不定方程
+
+&emsp;&emsp;所谓的一次不定方程的一般形式是 $a_1x_1+a_2x_2+...+a_kx_k=c$ ，其中整数 $k\geqslant 2,c,a_1,...,a_k$ 是整数，且 $a_1,...,a_k$都不等于零， $x_1,...,x_k$ 是整数变量。我们首先给出该方程有解的一个充要条件。
+
+&emsp;&emsp;**定理**：不定方程 $a_1x_1+a_2x_2+...+a_kx_k=c$ 有解的充要条件是 $(a_1,...,a_k)|c$ 。当并且当该不定方程有解时，它的解与不定方程
+
+$$\begin{align\*}
+\frac{a_1}{d}x_1+\cdot\cdot\cdot+\frac{a_k}{d}x_k=\frac{c}{d}
+\end{align\*}$$
+
+&emsp;&emsp;的解相同，这里 $d=(a_1,a_2,...,a_k)$
+
+&emsp;&emsp;**证明**：如果方程有解，则必然有 $(a_1,...,a_k)|c$ ，否则就会出现等式左边为整数而等式右边为分数的矛盾。若 $(a_1,...,a_k)|c$ ，不妨设 $c=(a_1,...,a_k)c_1$ ，由裴蜀定理，必然有：
+
+$$\begin{align\*}
+a_1y_1+a_2y_2+...+a_ky_k=(a_1,...,a_k)
+\end{align\*}$$
+
+&emsp;&emsp;那么 $x_1=c_1y_1,...,x_k=c_ky_k$ 就是原不定方程的一组解，命题得证。
+
+&emsp;&emsp;**定理**：设二元一次不定方程 $a_1x_1+a_2x_2=c$ 有解，若 $x_{1,0},x_{2,0}$ 是它的一组解，那么它所有的解是：
+
+$$\begin{align\*}
+\begin{cases}
+x_1=x_{1,0}+\frac{a_2}{(a_1,a_2)}t\\
+x_2=x_{2,0}-\frac{a_1}{(a_1,a_2)}t\\
+\end{cases}
+\end{align\*}$$
+
+&emsp;&emsp;其中 $t=0,\pm1,\pm2,...$ 
+
+&emsp;&emsp;证明：容易验证定理给出的每一对 $x_1,x_2$ 为该二元一次不定方程的解，反过来，设 $x_1,x_2$ 是该二元一次不定方程的解，那么有：
+
+$$\begin{align\*}
+a_1x_1+a_2x_2=a_1x_{1,0}+a_2x_{2,0}\\
+\therefore a_1(x_1-x_{1,0})=-a_2(x_2-x_{2,0})\\
+\frac{a_1}{(a_1,a_2)}(x_1-x_{1,0})=-\frac{a_2}{(a_1,a_2)}(x_2-x_{2,0})\\
+\end{align\*}$$
+
+由于 $(\frac{a_1}{(a_1,a_2)},\frac{a_2}{(a_1,a_2)})=1$ ，所以
+
+$$\begin{align\*}
+x_1-x_{1,0}=\frac{a_2}{(a_1,a_2)}t,x_2-x_{2,0}=-\frac{a_1}{(a_1,a_2)}t
+\end{align\*}$$
+
+&emsp;&emsp;求解二元一次不定方程的步骤并不复杂，先判断是否有解，有解则设法求出一组特解，之后再利用公式给出全部解。
+
+## 整数的素分解
+
+&emsp;&emsp;**引理**：设 $p$ 是素数且 $p|a_1a_2$ ，那么 $p|a_1$ 或者 $p|a_2$ 至少有一个成立，一般地，如果 $p|a_1\cdot\cdot\cdot a_k$ ，那么 $p|a_1,p|a_2,...,p|a_k$ 至少有一个成立。
+- 其实我们在前面最大公因子那一节已经有过这个结论。
+
+&emsp;&emsp;**算术基本定理**：设 $a>1$ ，那么，必有：
+
+$$\begin{align\*}
+a=p_1p_2\cdot\cdot\cdot p_s
+\end{align\*}$$
+
+&emsp;&emsp;其中 $p_j(1\leqslant j\leqslant s)$ 是素数，且在不计次序的意义下，该表达式是唯一的。
+
+&emsp;&emsp;**证明**：存在性：使用数学归纳法，当 $a=2$ 时，2是素数，结论成立。假设当 $2\leqslant a<n$ 时，结论成立，那么当 $a=n$ 时，若 $n$ 是素数，则结论成立，若 $n$ 是合数，则必有 $n=n_1n_2$ ，由于 $2\leqslant n_1,n_2<n$ ，所以 $n_1,n_2$ 皆可表示为素数的成绩，所以 $n$ 也都可表示为素数的乘积。
+
+&emsp;&emsp;唯一性：若有两种形式的素分解：
+
+$$\begin{align\*}
+a=p_1p_2\cdot\cdot\cdot p_s,1\leqslant p_1\leqslant p_2\leqslant\cdot\cdot\cdot\leqslant p_s\\
+a=q_1q_2\cdot\cdot\cdot q_r,1\leqslant q_1\leqslant q_2\leqslant\cdot\cdot\cdot\leqslant q_r\\
+\end{align\*}$$
+
+&emsp;&emsp;其中 $p_i(1\leqslant i\leqslant s),q_i(1\leqslant i\leqslant r)$ 是素数，不妨设 $s\leqslant r$ ，我们来证明必有 $r=s,p_i=q_i(1\leqslant i\leqslant s)$ ，由 $q_1|a=p_1p_2\cdot\cdot\cdot p_s$ 可知必有一个 $p_j$ 满足 $q_1|p_j$ ，由于 $q_1,p_j$ 都是素数，故 $q_1=p_j$ ，同样，由 $p_1|a=q_1q_2\cdot\cdot\cdot q_r$ 可知必有一个 $q_i$ 满足 $p_1|q_i$ ，因而 $p_1=q_i$ ，由于 $q_1\leqslant q_i=p_1\leqslant p_j$ ，所以 $p_1=q_1$ 。因此：
+
+$$\begin{align\*}
+p_2\cdot\cdot\cdot p_s=q_2\cdot\cdot\cdot q_r
+\end{align\*}$$
+
+同理可得：
+
+$$\begin{align\*}
+q_2=p_2,...,q_s=p_s,q_{s+1}=1,...,q_r=1
+\end{align\*}$$
+
+故不存在 $q_{s+1},...,q_r$ ，即 $r=s$ 。定理得证。
+
+&emsp;&emsp;**推论**：设 $a>1$ ，那么必有
+
+$$\begin{align\*}
+a=p_1^{\alpha_1}\cdot\cdot\cdot p_s^{\alpha_s}
+\end{align\*}$$
+
+&emsp;&emsp;其中， $p_1<p_2<...<p_s$ ，该式也被称为 $a$ 的标准素因数分解式。
+
+&emsp;&emsp;**推论**：设 $a=p_1^{\alpha_1}\cdot\cdot\cdot p_s^{\alpha_s}$ 且 $p_i$ 是互不相同的素数，那么 $d$ 是 $a$ 的正因数的充要条件是：
+
+$$\begin{align\*}
+d=p_1^{e_1}\cdot\cdot\cdot p_s^{e_s},0\leqslant e_j\leqslant\alpha_j,1\leqslant j\leqslant s
+\end{align\*}$$
+
+&emsp;&emsp;**推论**：设：
+
+$$\begin{align\*}
+a=p_1^{\alpha_1}\cdot\cdot\cdot p_s^{\alpha_s}\\
+b=p_1^{\beta_1}\cdot\cdot\cdot p_s^{\beta_s}\\
+\end{align\*}$$
+
+&emsp;&emsp;这里 $p_1<p_2<...<p_s$ 并且允许某个 $\alpha_j$ 和 $\beta_j$ 为零，那么：
+
+$$\begin{align\*}
+(a,b)=p_1^{\delta_1}\cdot\cdot\cdot p_s^{\delta_s},\delta_j=min(\alpha_j,\beta_j),1\leqslant j\leqslant s\\
+\[a,b\]=p_1^{\gamma_1}\cdot\cdot\cdot p_s^{\gamma_s},\gamma_j=max(\alpha_j,\beta_j),1\leqslant j\leqslant s
+\end{align\*}$$
+
+&emsp;&emsp;**推论**：设 $a$ 是正整数， $\tau(a)$ 表示 $a$ 的所有正除数的个数，若 $a$ 有标准素因数分解式 $p_1^{\alpha_1}\cdot\cdot\cdot p_s^{\alpha_s}$ ，那么：
+
+$$\begin{align\*}
+\tau(a)=(\alpha_1+1)\cdot\cdot\cdot (\alpha_s+1)=\tau(p_1^{\alpha_1})\cdot\cdot\cdot\tau(p_s^{\alpha_s})
+\end{align\*}$$
+
+&emsp;&emsp;这也不难理解，每一个 $p_1^{\alpha_1}$ 都会包含 $\alpha_1+1$ 个正除数（包括1），最后使用分步乘法计数原理即可。
+
+&emsp;&emsp;**推论**：设整数 $a\geqslant 2$ :  
+&emsp;&emsp;(1)若 $a$ 是合数，则必有不可约数 $p|a,p\leqslant a^{\frac{1}{2}}$    
+&emsp;&emsp;(2)若 $a=p_1p_2\cdot\cdot\cdot p_s$ ，则必有不可约数 $p|a,p\leqslant a^{\frac{1}{s}}$
+
+&emsp;&emsp;下面我们来介绍一个十分重要的数论函数 $\[x\]$ 。
+
+&emsp;&emsp;设 $x$ 是实数， $\[x\]$ 表示不超过 $x$ 的最大整数，称为 $x$ 的整数部分，即 $\[x\]$ 是一个整数并且满足  $\[x\]\leqslant x<\[x\]+1$ ，记 $\\{x\\}=x-\[x\]$ ，称其为 $x$ 的小数部分，显然 $0\leqslant\\{x\\}<1$ ，且 $x$ 是整数的充要条件是 $\\{x\\}=0$ 。
+
+&emsp;&emsp;该函数有如下性质：
+- 若 $x\leqslant y$ ，则 $\[x\]\leqslant\[y\]$   
+- 若 $x=m+v$ ， $m$ 是整数， $0\leqslant v<1$ ，则 $m=\[x\],v=\\{x\\}$
+- 对任意整数 $m$ 有 $\[x+m\]=\[x\]+m,\\{x+m\\}=\\{x\\}$ ， $\{x\}$ 是周期为1的周期函数。
+- $\[x\]+\[y\]\leqslant\[x+y\]\leqslant\[x\]+\[y\]+1$ ，其中等号有且仅有一个成立。
+-
+
+$$\begin{align\*}
+\[-x\]=
+\begin{cases}
+-\[x\] ,x\in Z\\
+-\[x\]-1 ,x\notin Z\\
+\end{cases}
+\\{-x\\}=
+\begin{cases}
+-\\{x\\}=0,x\in Z\\
+1-\\{x\\},x\notin Z\\
+\end{cases}
+\end{align\*}$$
+
+- 对正整数 $m$ 有 $\[\frac{\[x\]}{m}\]=\[\frac{x}{m}\]$
+- 不小于 $x$ 的最小整数是 $-\[-x\]$
+- 设 $a,N$ 是正整数，那么正整数 $1,2,...,N$ 中被 $a$ 整除的正整数个数是 $\[N/a\]$
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
