--- a/01_整除.md
+++ b/01_整除.md
@@ -616,11 +616,14 @@ $$\begin{align\*}
 &emsp;&emsp;设 $x$ 是实数， $\[x\]$ 表示不超过 $x$ 的最大整数，称为 $x$ 的整数部分，即 $\[x\]$ 是一个整数并且满足  $\[x\]\leqslant x<\[x\]+1$ ，记 $\\{x\\}=x-\[x\]$ ，称其为 $x$ 的小数部分，显然 $0\leqslant\\{x\\}<1$ ，且 $x$ 是整数的充要条件是 $\\{x\\}=0$ 。
 
 &emsp;&emsp;该函数有如下性质：
-- 若 $x\leqslant y$ ，则 $\[x\]\leqslant\[y\]$   
-- 若 $x=m+v$ ， $m$ 是整数， $0\leqslant v<1$ ，则 $m=\[x\],v=\\{x\\}$
-- 对任意整数 $m$ 有 $\[x+m\]=\[x\]+m,\\{x+m\\}=\\{x\\}$ ， $\{x\}$ 是周期为1的周期函数。
-- $\[x\]+\[y\]\leqslant\[x+y\]\leqslant\[x\]+\[y\]+1$ ，其中等号有且仅有一个成立。
--
+- (1)若 $x\leqslant y$ ，则 $\[x\]\leqslant\[y\]$     
+  由 $\[x\]\leqslant x\leqslant y<y+1$ 可得   
+- (2)若 $x=m+v$ ， $m$ 是整数， $0\leqslant v<1$ ，则 $m=\[x\],v=\\{x\\}$   
+- (3)对任意整数 $m$ 有 $\[x+m\]=\[x\]+m,\\{x+m\\}=\\{x\\}$ ， $\{x\}$ 是周期为1的周期函数。  
+  由 $\[x\]+m\leqslant x+m<\[x\]+m+1$ 可得。
+- (4) $\[x\]+\[y\]\leqslant\[x+y\]\leqslant\[x\]+\[y\]+1$ ，其中等号有且仅有一个成立。  
+  对 $x,y$ 的小数部分分类讨论即可。
+- (5)
 
 $$\begin{align\*}
 \[-x\]=
@@ -635,24 +638,70 @@ $$\begin{align\*}
 \end{cases}
 \end{align\*}$$
 
-- 对正整数 $m$ 有 $\[\frac{\[x\]}{m}\]=\[\frac{x}{m}\]$
-- 不小于 $x$ 的最小整数是 $-\[-x\]$
-- 设 $a,N$ 是正整数，那么正整数 $1,2,...,N$ 中被 $a$ 整除的正整数个数是 $\[N/a\]$
+&emsp;&emsp;当 $x$ 不是整数时， $-x=-\[x\]-\\{x\\}=-\[x\]-1+1-\\{x\\},0\leqslant 1-\\{x\\}<1$
+- (6)对正整数 $m$ 有 $\[\frac{\[x\]}{m}\]=\[\frac{x}{m}\]$    
+  由带余除法，存在整数 $q,r$ 使得 $\[x\]=qm+r,0\leqslant r<m$ ,所以 $\[x\]/m=q+r/m,0\leqslant r/m<1$ ,也就有 $\[\[x\]/m\]=q$ ，另一方面， $x/m=\[x\]/m+\\{x\\}/m=q+(\\{x\\}+r)/m$ ，但是由于 $0\leqslant(\\{x\\}+r)/m<1$ ，所以 $\[x/m\]=q$ 
+- (7)不小于 $x$ 的最小整数是 $-\[-x\]$    
+  设不小于 $x$ 的最小整数是 $a$ ，那就有 $a-1<x\leqslant a$ ，所以 $-a\leqslant -x<-a+1$ ，所以 $-a=-\[-x\]$
+- (8)设 $a,N$ 是正整数，那么正整数 $1,2,...,N$ 中被 $a$ 整除的正整数个数是 $\[N/a\]$
+  被 $a$ 整除的正整数是 $a,2a,3a,...$ ，那必然存在一个 $k$ ，使得 $ka\leqslant N<(k+1)a$ ， 也就有 $k\leqslant N/a<(k+1)$ 。
 
+&emsp;&emsp;**定义**：设 $k$ 是非负整数，符号 $a^k||b$ 表示 $b$ 恰好被 $a$ 的 $k$ 次方整除，即 $a^k|b,a^{k+1}\nmid b$ 。
+
+&emsp;&emsp;**定理**：设 $n$ 是正整数， $p$ 是素数，将满足 $p^{\alpha}||n!$ 的 $\alpha$ 记作 $\alpha(p,n)$ ，那么有：
+
+$$\begin{align\*}
+\alpha=\alpha(p,n)=\sum_{j=1}^{\infty}\[\frac{n}{p^j}\]
+\end{align\*}$$
+
+&emsp;&emsp;**证明**：该等式实际上是有限和，因为必然存在 $k$ 使得 $p^k\leqslant n<p^{k+1}$ ，所以即证：
+
+$$\begin{align\*}
+\alpha=\alpha(p,n)=\sum_{j=1}^{k}\[\frac{n}{p^j}\]
+\end{align\*}$$
   
+&emsp;&emsp;设 $j$ 是给定的正整数， $c_j$ 表示 $1,2,...,n$ 中能够被 $p^j$ 整除的数的个数， $d_j$ 表示 $1,2,...,n$ 中恰好能被 $p^j$ 整除的数的个数，那么有 $d_j=c_j-c_{j-1}$ ，并且当 $j>k$ 时， $d_j=c_j=0$ ，由数论函数的性质，我们是可以表示出 $c_j$ 的，也就有：
 
+$$\begin{align\*}
+d_j=\[\frac{n}{p^j}\]-\[\frac{n}{p^{j+1}}\]
+\end{align\*}$$
 
+&emsp;&emsp;下面将 $1,2,...,n$ 分为两两不交的 $k$ 个集合，第 $j$ 个集合中放置恰好能被 $p^j$ 整除的数，也就是有 $d_j$ 个元素，所以这 $d_j$ 个元素的乘积恰好能够被 $(p^j)^{d_j}$ 次方整除，由于 $n!$ 就是将这 $k$ 个集合中的元素全部相乘，那么就有：
 
+$$\begin{align\*}
+p^{\alpha}=(p^1)^{d_1}(p^2)^{d_2}\cdot\cdot\cdot(p^k)^{d_k}\\
+\therefore \alpha=1\cdot d_1+2\cdot d_2+\cdot\cdot\cdot+k\cdot d_k\\
+\therefore \alpha=1\cdot(\[\frac{n}{p^1}\]-\[\frac{n}{p^{2}}\])+2\cdot(\[\frac{n}{p^2}\]-\[\frac{n}{p^{3}}\])+\cdot\cdot\cdot+k\cdot(\[\frac{n}{p^k}\]-\[\frac{n}{p^{k+1}}\])\\
+\therefore \alpha=\[\frac{n}{p^1}\]+\[\frac{n}{p^2}\]+\cdot\cdot\cdot+\[\frac{n}{p^k}\]\\
+\end{align\*}$$
 
+&emsp;&emsp;命题得证。
 
+&emsp;&emsp;**推论**：设 $n$ 是正整数，我们有(这里连乘号表示对所有不超过 $n$ 的素数求积)：
 
+$$\begin{align\*}
+n!=\prod_{p\leqslant n}p^{\alpha(p,n)}
+\end{align\*}$$
 
+&emsp;&emsp;**例**：求 $80!$ 的十进制表示中结尾部分零的个数。
 
+&emsp;&emsp;**解**：如果考虑八十个数的连乘，那么会导致结尾部分有零的数会有很多，包括10的倍数，2的倍数与5的倍数的组合等等，但是如果我们考虑 $80!$ 标准素因数分解，那么贡献0的只有2和5，显然，2的幂次显然要大于5的幂次，所以最后的关键就是5的幂次，也就是求 $\alpha(5,80)$ ，代入公式即可。
 
+&emsp;&emsp;**例**：设整数 $a_j>0$ ， $1\leqslant j\leqslant s$ ， $n=a_1+a_2+...+a_s$ ，证明： $n!/(a_1!a_2!...a_s!)$ 是整数。
 
+&emsp;&emsp;**解**：我们依然考虑这些数的标准素因数分解，对于任意一个小于 $n$ 的素数 $p$ ，只要其在 $n!$ 的标准素因数分解式的幂次大于其在 $a_1!a_2!...a_s!$ 的标准素因数分解式的幂次，那么最后的结果就是整数。也就是说，我们只需证：对于任意一个小于 $n$ 的素数 $p$ ，必有
 
+$$\begin{align\*}
+\alpha(p,n)\geqslant\alpha(p,a_1)+\alpha(p,a_2)+...+\alpha(p,a_s)
+\end{align\*}$$
 
+&emsp;&emsp;也就是对于任意的 $i\geqslant 1$ ，都有
 
+$$\begin{align\*}
+\[\frac{n}{p^i}\]\geqslant\[\frac{a_1}{p^i}\]+\[\frac{a_2}{p^i}\]+...+\[\frac{a_s}{p^i}\]
+\end{align\*}$$
+
+&emsp;&emsp;由 $n=a_1+a_2+...+a_s$ 以及数论函数的性质(4)即可说明上式成立，命题得证。
 
 
 
